# pdf_image_extractor

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
pdf_image_extractor/: __init__.py  extract_images.py  extract_images_gui.py
